<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- MWord apps common string -->
    <string name="app_name">MWord</string>
    <string name="app_exit">退出</string>
    <string name="dialog_ok">确认</string>
    <string name="dialog_cancel">取消</string>
    <string name="app_other_setting">其它设置</string>
    <!-- MainActivity Action Bar with show-->
    <string name="action_switch">切换</string>
    <string name="action_settings">设置</string>
    <string name="switching_translate">翻译</string>
    <string name="switching_remember">助手</string>
    <!-- MainActivity Action Bar Setting OptionMenu -->
    <string name="action_import">导入单词</string>
    <string name="action_export">导出单词</string>
    <!-- Import Opention Dialog -->
    <string name="import_title">导入单词</string>
    <string name="import_filename">文件名:</string>
    
    <!-- Remember Setting  -->
    <string name="remember_setting">助手设置</string>
    <string name="font_size">字体大小</string>
    <string name="font_color">字体颜色</string>
    <string name="word_font_size">单词字体大小</string>
    <string name="des_font_size">释义字体大小</string>
    <string name="word_font_color">单词字体颜色</string>
    <string name="des_font_color">释义字体颜色</string>
    <string name="setting_font_remember">字体设置</string>
    <string name="setting_font_remember_summary">字体大小、颜色设置</string>
    <string name="setting_word_font_remember">单词字体设置</string>
    <string name="setting_des_font_remember">释义字体设置</string>
    <string name="set_rem_word_font_size_summary">设置单词字体大小</string>
    <string name="set_rem_word_font_color_summary">设置单词字体颜色</string>
    <string name="set_rem_des_font_size_summary">设置释义字体大小</string>
    <string name="set_rem_des_font_color_summary">设置释义字体颜色</string>
    
    <!-- Gesture Setting -->
    <string name="setting_gesture">手势设置</string>
    <string name="setting_gesture_summary">单词释义区手势设置</string>
    <string name="setting_gesture_custom">自定义手势</string>
    <string name="gesture_toleft">向左滑动</string>
    <string name="gesture_toright">向右滑动</string>
    <string name="gesture_toup">向上滑动</string>
    <string name="gesture_todown">向下滑动</string>
    <string name="gesture_custom_dilogtitle">动作选择</string>
    <string name="first_word_info">这已经是第一个单词了⊙﹏⊙b汗</string>
    <string name="final_word_info">这已经是最后一个单词了~\(≧▽≦)/~</string>
    <!-- Translate Setting -->
    <string name="setting_translate">翻译设置</string>
    <string name="translate_API">翻译API</string>
    <string name="translate_API_select">翻译API选择</string>
    <string name="translate_API_baidu">百度翻译</string>
    <string name="translate_result_from_baiadu">翻译结果来自百度翻译</string>
    <!-- Gesture Action -->
    <string name="null_action">无</string>
    <string name="previous_action">上一个</string>
    <string name="next_action">下一个</string>
    <string name="new_action">添加</string>
    <string name="delete_action">删除</string>
    <!-- Remember Font Color -->
    <string name="black">黑色</string>
    <string name="red">红色</string>
    <string name="green">绿色</string>
    <string name="blue">蓝色</string>
    <!-- Warning Message -->
    <string name="note">提示</string>
    <string name="no_word_message">未找到单词:(</string>
    <!-- Adcance Setting -->
    <string name="app_advance_setteing">高级设置</string>
    <string name="app_advance_setting_summary">高级设置(部分重启生效)</string>
    <string name="app_view_setting">界面效果(重启生效)</string>
    <string name="swipeback">滑动返回</string>
    <string name="swipeback_summary_on">滑动返回开启</string>
    <string name="swipeback_summary_off">滑动返回关闭</string>
    <string name="immersion">沉浸式(Android4.4 以上有效)</string>
    <string name="immersion_summary_on">沉浸式开启</string>
    <string name="immersion_summary_off">沉浸式关闭</string>
    <string name="notification_setting">通知设置</string>
    <string name="update_notification">更新通知</string>
    <string name="update_notificateon_on">开启通知提醒</string>
    <string name="update_notification_off">关闭通知提醒</string>
    <!-- About  -->
    <string name="app_about">关于</string>
    <string name="app_about_summary">应用信息</string>
    
</resources>
