<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<PreferenceCategory 
        android:title="@string/setting_gesture_custom"
        android:key="remCustomGesture">
        <ListPreference 
            android:key="rem_gestureToRight_key"
            android:title="@string/gesture_toright"
            android:dialogTitle="@string/gesture_custom_dilogtitle"
            android:entries="@array/customgesture_entry"
            android:entryValues="@array/customgesture_entryValues"
            android:defaultValue="1"
            android:negativeButtonText="@string/dialog_cancel"/>
        <ListPreference 
            android:key="rem_gestureToLeft_key"
            android:title="@string/gesture_toleft"
            android:dialogTitle="@string/gesture_custom_dilogtitle"
            android:entries="@array/customgesture_entry"
            android:entryValues="@array/customgesture_entryValues"
            android:defaultValue="2"
            android:negativeButtonText="@string/dialog_cancel"/>
        <ListPreference 
            android:key="rem_gestureToUp_key"
            android:title="@string/gesture_toup"
            android:dialogTitle="@string/gesture_custom_dilogtitle"
            android:entries="@array/customgesture_entry"
            android:entryValues="@array/customgesture_entryValues"
            android:defaultValue="0"
            android:negativeButtonText="@string/dialog_cancel"/>
        <ListPreference 
            android:key="rem_gestureToDown_key"
            android:title="@string/gesture_todown"
            android:dialogTitle="@string/gesture_custom_dilogtitle"
            android:entries="@array/customgesture_entry"
            android:entryValues="@array/customgesture_entryValues"
            android:defaultValue="0"
            android:negativeButtonText="@string/dialog_cancel"/>
    </PreferenceCategory>
</PreferenceScreen>
