<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item 
        android:id="@+id/action_switching"
        android:orderInCategory="0"
        android:showAsAction="always"
        android:title="@string/action_switch"/>
    <item 
        android:id="@+id/action_import"
        android:orderInCategory="50"
        android:showAsAction="never"
        android:title="@string/action_import"/>
    <item 
        android:id="@+id/action_export"
        android:orderInCategory="51"
        android:showAsAction="never"
        android:title="@string/action_export"/>
    
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="52"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item 
        android:id="@+id/action_test"
        android:orderInCategory="53"
        android:showAsAction="never"
        android:title="Test"/>  
</menu>
